client/src/components/PopOutMenu/PopOutMenu.module.scss
@use 'variables';

.popout-menu {
  display: flex;
  flex-direction: column;
  position: absolute;
  background-color: variables.$primary-alt;
  padding: 0.5rem;
  border-radius: 0.25rem;
  row-gap: 0.5rem;
  box-shadow: 0 0 10px 2px rgba($color: #000000, $alpha: 0.4);
  z-index: 10;
}

.popout-button {
  display: grid;
  grid-template-columns: 0.1fr 1fr;
  align-items: center;
  column-gap: 1rem;
  border: none;
  background-color: variables.$primary-alt;
  color: variables.$secondary-color;
  border-radius: 0.15rem;
  padding: 0.25rem 1rem;
  transition: all 0.2s ease-in-out;
  font-weight: 300;
}

.popout-button > :nth-child(2) {
  justify-self: start;
}

.popout-button:hover {
  background-color: variables.$primary-light;
  cursor: pointer;
  transition: all 0.2s ease-in-out;
}

.popout-button-icon {
  width: 20px;
}

